--- a/login.html
+++ b/login.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大事件-登录/注册</title>
     <!-- 导入layui样式表 -->
-    <link rel="stylesheet" href="../assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="assets/lib/layui/css/layui.css">
     <!-- 导入个人样式表 -->
-    <link rel="stylesheet" href="../assets/css/login.css">
+    <link rel="stylesheet" href="assets/css/login.css">
 </head>
 
 <body>
     <!-- logo模块 start -->
     <div class="layui-main">
-        <img src="../assets/images/logo.png" alt="">
+        <img src="assets/images/logo.png" alt="">
     </div>
     <!-- logo模块 end -->
 
@@ -78,13 +78,13 @@
     </div>
     <!-- 登录/注册模块 end -->
     <!-- 导入layui的js文件 -->
-    <script src="../assets/lib/layui/layui.all.js"></script>
+    <script src="assets/lib/layui/layui.all.js"></script>
     <!-- 导入Jquery文件 -->
-    <script src="../assets/lib/jquery.js "></script>
+    <script src="assets/lib/jquery.js "></script>
     <!-- 导入自己封装的baseAPI js文件 -->
-    <script src="../assets/js/baseAPI.js "></script>
+    <script src="assets/js/baseAPI.js "></script>
     <!-- 导入JS文件 -->
-    <script src="../assets/js/login.js "></script>
+    <script src="assets/js/login.js "></script>
 
 </body>
 
